@@ -4,6 +4,19 @@ tags:
 ---
 # Class "GridEntityDoor"
 
+## Modified Variables
+___
+### PreviousState {: aria-label='Modified Variables' }
+#### int PreviousState  {: .copyable aria-label='Modified Variables' }
+Same as default, but now returns a proper integer value instead of userdata.
+
+___
+### PreviousVariant {: aria-label='Modified Variables' }
+#### int PreviousVariant  {: .copyable aria-label='Modified Variables' }
+Same as default, but now returns a proper integer value instead of userdata.
+
+___
+
 ## Functions
 
 ### GetExtraSprite () {: aria-label='Functions' }
