@@ -33,6 +33,7 @@ Fixes:
 * Fix XMLData GetNumEntries being inconsistent
 * Fix binder for Familiar:UpdateDirtColor
 * Fix FlatPatch spam in repentogon.log by reworking Quick Room Clear patch
+* Fix GridEntityDoor vanilla variables PreviousState/PreviousVaraint returning unusable userdata instead of integer
 /newline/
 v1.0.4 - 
 Additions:
